[package]
name = "sire_z3"
version = "0.1.0"
authors = ["Christian Poveda <git@christianpoveda.xyz>", "Oliver Scherer <oliver.schneider@kit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sire = { path = "../sire" }
rustc = {path = "../librustc"}
